--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.vectordrawable:vectordrawable:1.2.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation "com.github.AppDevNext.Logcat:LogcatCoreLib:3.2"
 
     // https://mvnrepository.com/artifact/com.illposed.osc/javaosc-core
     implementation group: 'com.illposed.osc', name: 'javaosc-core', version: '0.4'
