--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     namespace 'info.hannesa2.osc'
     defaultConfig {
         applicationId "info.hannesa2.osc"
-        minSdkVersion 21
+        minSdkVersion 26
         compileSdk 35
         targetSdkVersion 35
         versionCode 1
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation project(":osc")
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
@@ -40,5 +41,5 @@ dependencies {
     implementation "com.github.AppDevNext.Logcat:LogcatCoreLib:3.3.1"
 
     // https://mvnrepository.com/artifact/com.illposed.osc/javaosc-core
-    implementation "com.illposed.osc:javaosc-core:0.4"
+//    implementation "com.illposed.osc:javaosc-core:0.4"
 }
