--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -2,7 +2,7 @@ name: Update Gradle Wrapper
 
 on:
   schedule:
-    - cron: "0 8 * * SAT"
+    - cron: "25 14 * * WED"
 
 jobs:
   update-gradle-wrapper:
@@ -10,9 +10,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
+      - name: Install JDK
+        uses: actions/setup-java@v4
+        with:
+          distribution: "adopt"
+          java-version: 17
       - name: Update Gradle Wrapper
         uses: gradle-update/update-gradle-wrapper-action@v2.0.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
           set-distribution-checksum: false
